--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -60,16 +60,16 @@
     "problemsTitle": "Проблемы",
     "solutionsTitle": "Решения",
     "items": {
-      "manual": "Необходимость мониторить 50+ каналов вручную",
+      "manual": "Необходимость мониторить десятки каналов вручную",
       "missed": "Пропуск важных сигналов и новостей",
-      "time": "Время на фильтрацию информации (10+ часов в день)",
+      "time": "Время на сбор информации (2+ часов в день)",
       "opportunities": "Упущенные возможности из-за задержки информации",
       "competitors": "Невозможность отслеживать конкурентов в реальном времени"
     },
     "solutions": {
-      "automatic": "Автоматический мониторинг 100+ каналов одновременно",
+      "automatic": "Автоматический мониторинг до 500 каналов одновременно",
       "instant": "Мгновенные уведомления о важных событиях",
-      "savings": "Экономия 10-15 часов в неделю",
+      "savings": "Экономия до 10-15 часов в неделю",
       "first": "Первым узнавай о возможностях",
       "analytics": "Real-time аналитика конкурентов"
     }
