Update Light tariff subtitle from 'For beginners' to 'Hobby plan'

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -73,7 +73,7 @@
     "footer": "Paid plans without card binding",
     "plans": {
       "light": {
-        "subtitle": "For beginners"
+        "subtitle": "Hobby plan"
       },
       "medium": {
         "subtitle": "Most popular"
