--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -73,7 +73,7 @@
     "footer": "Planes de pago sin vinculación de tarjeta",
     "plans": {
       "light": {
-        "subtitle": "Para principiantes"
+        "subtitle": "Plan de hobby"
       },
       "medium": {
         "subtitle": "Más popular"
