--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -93,7 +93,7 @@
     "footer": "Платные тарифы без привязки карты",
     "plans": {
       "light": {
-        "subtitle": "Для начинающих"
+        "subtitle": "Хобби-план"
       },
       "medium": {
         "subtitle": "Самый популярный"
