Update Medium and Hard tariff subtitles: specialists and pros

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -76,10 +76,10 @@
         "subtitle": "Hobby plan"
       },
       "medium": {
-        "subtitle": "Most popular"
+        "subtitle": "For specialists"
       },
       "hard": {
-        "subtitle": "For professionals"
+        "subtitle": "For pros"
       },
       "rock": {
         "subtitle": "Maximum power"
