--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -76,7 +76,7 @@
         "subtitle": "Plan de hobby"
       },
       "medium": {
-        "subtitle": "Más popular"
+        "subtitle": "Para especialistas"
       },
       "hard": {
         "subtitle": "Para profesionales"
