--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -96,10 +96,10 @@
         "subtitle": "Хобби-план"
       },
       "medium": {
-        "subtitle": "Самый популярный"
+        "subtitle": "Для специалистов"
       },
       "hard": {
-        "subtitle": "Для профессионалов"
+        "subtitle": "Для профи"
       },
       "rock": {
         "subtitle": "Максимальная мощность"
