Swap price display order for multi-month plans: show monthly price prominently, total price in small text

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -61,6 +61,7 @@
     "selectDuration": "Select duration",
     "month": "per month",
     "months": "mo.",
+    "forPeriod": "for {{months}} mo.",
     "discount": "Discount",
     "duration": {
       "1": "1 month",
